# chrysalis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
chrysalis/: config.py
chrysalis/ci/: github_actions_template.yml
chrysalis/corpus/: generator.py  schemas.py  validator.py
chrysalis/mrs/: base.py
chrysalis/mrs/generic/: chr_gen_005.py  chr_gen_018.py  chr_gen_019.py
chrysalis/mrs/nli/: chr_nli_004.py  chr_nli_005.py  chr_nli_006.py
chrysalis/mrs/sa/: chr_sa_001.py  chr_sa_007.py  chr_sa_008.py  chr_sa_010.py
chrysalis/registry/: mr_registry.yaml  registry.py
chrysalis/regression/: differ.py
chrysalis/snapshot/: engine.py
pilot/: README.md  benchmark_gpu.py  benchmark_gpu.sh  model_loader.py  pipeline.py  quantize_v4.py  quantized_model_loader.py  run.sh  run_all_profiles.sh  run_chrysalis_demo_all_profiles.sh  run_fullscale.sh  run_quantize_v4.sh  run_quantize_v4_all_profiles.sh  run_v4_evaluation_all_profiles.sh
pilot/artifacts/manual_validation/: manual_validation_artifacts_CHR-GEN-005.csv  manual_validation_artifacts_CHR-GEN-018-A.csv  manual_validation_artifacts_CHR-GEN-018-B.csv  manual_validation_artifacts_CHR-GEN-019.csv  manual_validation_artifacts_CHR-NLI-004.csv  (+6 more)
pilot/training/: common.py  train_v1.py  train_v2.py  train_v3.py
tests/integration/: test_corpus_pipeline.py
tests/unit/: test_chr_gen_005.py  test_chr_gen_018.py  test_chr_gen_019.py  test_chr_nli_004.py  test_chr_nli_005.py  test_chr_nli_006.py  test_chr_sa_001.py  test_chr_sa_007.py  test_chr_sa_008.py  test_chr_sa_010.py
(+291 files in other folders)
