[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chrysalis"
version = "1.0.0"
description = "Behavioral regression testing for NLP classifiers using metamorphic testing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "spacy>=3.6.0",
    "nltk>=3.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
include = ["chrysalis*"]

[tool.setuptools.package-data]
chrysalis = ["registry/mr_registry.yaml", "ci/github_actions_template.yml"]
